kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__status_line_goal_complete_elapsed_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Kodex to do anything                                                      "
"                                                                                "
"  GPT-5.5                                           Goal achieved (2d 23h 42m)  "
